# Car-Tracking

./: .gitignore  CMakeLists.txt  README.md
data/: rubrics.txt
src/: DetectCar.cpp  DetectCar.h  PreOps.cpp  PreOps.h  main.cpp
